Fix checkbox label alignment on Special:ElectronPdf
Make sure the checkbox label and description are on seperate lines and aligned.

Bug: T167272

--- a/modules/ext.ElectronPdfService.special.css
+++ b/modules/ext.ElectronPdfService.special.css
@@ -18,6 +18,8 @@
 
 .mw-electronPdfService-selection-label-text {
 	font-size: 13px;
+	font-weight: bold;
+	padding-top: 9px;
 }
 
 .mw-electronPdfService-selection-label-desc {
